# FasTC

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
ASTCEncoder/: CMakeLists.txt
ASTCEncoder/include/: ASTCCompressor.h
ASTCEncoder/include/FasTC/: ASTCCompressor.h
ASTCEncoder/src/: Decompressor.cpp  IntegerEncoding.cpp  IntegerEncoding.h  Utils.h
ASTCEncoder/test/: CMakeLists.txt  TestASTCDecompression.cpp  TestIntegerEncoding.cpp
BPTCEncoder/: CMakeLists.txt
BPTCEncoder/config/: BC7Config.h.in  BPTCConfig.h.in  testsse4.1.cpp
BPTCEncoder/include/: BC7Compressor.h  BPTCCompressor.h  Shapes.h
BPTCEncoder/include/FasTC/: BPTCCompressor.h  Shapes.h
BPTCEncoder/src/: AnchorTables.h  BC7CompressionMode.h  BC7CompressionModeSIMD.h  BC7Compressor.cpp  BC7CompressorSIMD.cpp  BC7IntTypes.h  BCLookupTables.h  BitStream.h  CompressNVTT.cpp  CompressionMode.h  CompressionModeSIMD.h  Compressor.cpp  CompressorSIMD.cpp  Decompressor.cpp  LICENSE.txt  ParallelStage.cpp  ParallelStage.h  RGBAEndpoints.cpp  RGBAEndpoints.h  RGBAEndpointsSIMD.cpp  RGBAEndpointsSIMD.h  Shapes.h
Base/: CMakeLists.txt
Base/config/: BaseConfig.h.in  FasTCBaseConfig.h.in
Base/include/: Bits.h  Color.h  CompressionFormat.h  CompressionJob.h  IPixel.h  Image.h  ImageFwd.h  Matrix3x3.h  Matrix4x4.h  MatrixBase.h  MatrixSquare.h  Pixel.h  TexCompTypes.h  Vector2.h  Vector3.h  Vector4.h  VectorBase.h
Base/include/FasTC/: BitStream.h  Bits.h  Color.h  CompressionFormat.h  CompressionJob.h  IPixel.h  Image.h  ImageFwd.h  Matrix2x2.h  Matrix3x3.h  Matrix4x4.h  MatrixBase.h  MatrixSquare.h  Pixel.h  ScopedAllocator.h  TexCompTypes.h  Vector2.h  Vector3.h  Vector4.h  VectorBase.h
Base/src/: Color.cpp  CompressionJob.cpp  IPixel.cpp  Image.cpp  Pixel.cpp
Base/test/: CMakeLists.txt  TestARGBPixel.cpp  TestBits.cpp  TestColor.cpp  TestImage.cpp  TestMatrix.cpp  TestPixel.cpp  TestVector.cpp  Utils.h
CLTool/: CMakeLists.txt  main.cpp
CLTool/src/: clunix.cpp  clwin32.cpp  compare.cpp  decomp.cpp  tc.cpp
CMakeModules/: FasTCConfig.cmake.in  FasTCVersion.cmake.in  FindBC7Export.cmake  FindPVRTexLib.cmake
CMakeModules/bc7_export/: CMakeLists.txt
Core/: CMakeLists.txt
Core/include/: BlockStats.h  CompressedImage.h  CompressionJob.h  Image.h  ReferenceCounter.h  TexComp.h  TexCompTypes.h  Thread.h  ThreadSafeStreambuf.h
Core/include/FasTC/: CompressedImage.h  ReferenceCounter.h  StopWatch.h  TexComp.h  ThreadSafeStreambuf.h
Core/src/: BlockStats.cpp  CompressedImage.cpp  CompressionFuncs.h  CompressionJob.cpp  Image.cpp  StopWatch.h  StopWatchOSX.cpp  StopWatchUnix.cpp  StopWatchWin32.cpp  TexComp.cpp  Thread.cpp  Thread.h  ThreadBoost.cpp  ThreadGroup.cpp  ThreadGroup.h  ThreadPThread.cpp  ThreadSafeStreambuf.cpp  ThreadWin32.cpp  WorkerQueue.cpp  WorkerQueue.h
DXTEncoder/: CMakeLists.txt
DXTEncoder/include/: DXTCompressor.h
DXTEncoder/include/FasTC/: DXTCompressor.h
DXTEncoder/src/: Compressor.cpp  DXTCompressor.cpp  DXTCompressorSSE2DLL.cpp  DXTDecompressor.cpp  Decompressor.cpp  stb_dxt.h
ETCEncoder/: CMakeLists.txt
ETCEncoder/include/: ETCCompressor.h
ETCEncoder/include/FasTC/: ETCCompressor.h
ETCEncoder/src/: Compressor.cpp  Decompressor.cpp  rg_etc1.cpp
GTest/cmake/: internal_utils.cmake
GTest/src/: gtest-death-test.cc
IO/: CMakeLists.txt  ImageFile.cpp  ImageFile.h  ImageLoader.h.in  ImageLoaderPNG.cpp  ImageLoaderPNG.h
IO/config/: ImageLoader.h.in  ImageWriter.h.in
IO/include/: FileStream.h  ImageFile.h  ImageFileFormat.h
IO/include/FasTC/: FileStream.h  ImageFile.h  ImageFileFormat.h
IO/src/: FileStream.cpp  FileStreamUnix.cpp  FileStreamWin32.cpp  GLDefines.h  ImageFile.cpp  ImageLoader.cpp  ImageLoaderASTC.cpp  ImageLoaderASTC.h  ImageLoaderKTX.cpp  ImageLoaderKTX.h  ImageLoaderPNG.cpp  ImageLoaderPNG.h  ImageLoaderPVR.cpp  ImageLoaderPVR.h  ImageLoaderTGA.cpp  ImageLoaderTGA.h  ImageWriter.cpp  ImageWriterKTX.cpp  ImageWriterKTX.h  ImageWriterPNG.cpp  ImageWriterPNG.h
PVRTCEncoder/: CMakeLists.txt
PVRTCEncoder/config/: PVRTCDefines.h.in
PVRTCEncoder/include/: PVRTCCompressor.h
PVRTCEncoder/include/FasTC/: PVRTCCompressor.h
PVRTCEncoder/src/: Block.cpp  Block.h  Compressor.cpp  CompressorPVRLib.cpp  Decompressor.cpp  Image.cpp  Image.h  Indexer.h  PVRTCImage.cpp  PVRTCImage.h  Pixel.cpp  Pixel.h
PVRTCEncoder/test/: BlockTest.cpp  CMakeLists.txt  DecompTestPVR.cpp  DecompressorTest.cpp  ImageTest.cpp  PixelTest.cpp  TestUtils.h
PVRTCEncoder/test/data/: 2bpp-gradient.pvr  2bpp-gray.pvr  2bpp-trans-gradient.pvr  2bpp-transparent.pvr  2bpp-white.pvr  4bpp-gradient.pvr  4bpp-gray.pvr  4bpp-transparent.pvr  trans-gradient.pvr  white.pvr
QtGUI/: CMakeLists.txt
